# wenmode

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  sonar-project.properties
.github/workflows/: docs.yml  pypi.yml  test.yml
docs/: api.rst  benchmarks.md  changelog.md  comparison.md  compatibility.md  compliance.md  conf.py  custom-plugins.md  custom-rules.md  development.md  directives.md  index.md  integrations.md  internals.md  introduce.md  plugins.md  presets.md  recipes.md  reference.md  rule-matrix.md  rules.md  security.md  sponsors.rst  troubleshooting.md  usage.md
docs/_static/: custom.css
docs/api/: directives.rst  helpers.rst  main.rst  nodes.rst  plugins.rst  renderers.rst  rules.rst
docs/migration/: commonmark-py.md  index.md  markdown-it-py.md  markdown2.md  marko.md  mistune.md  python-markdown.md
docs/recipes/: ai-generated-markdown.md  ast-workflows.md  custom-renderer.md  github-flavored-markdown.md  index.md  table-of-contents.md
docs/references/: core-blocks.md  core-inlines.md  extension-blocks.md  extension-inlines.md  index.md  nodes.md
examples/wenmode-docx/: README.md  pyproject.toml
examples/wenmode-docx/src/wenmode_docx/: __init__.py  converter.py
examples/wenmode-docx/tests/: test_converter.py
examples/wenmode-fastapi/: README.md  pyproject.toml
examples/wenmode-fastapi/src/wenmode_fastapi/: __init__.py  app.py
examples/wenmode-fastapi/tests/: test_app.py
examples/wenmode-mkdocs/: README.md  mkdocs.yml  pyproject.toml
examples/wenmode-mkdocs/docs/: index.md
examples/wenmode-mkdocs/src/wenmode_mkdocs/: __init__.py  plugin.py
examples/wenmode-mkdocs/tests/: test_plugin.py
examples/wenmode-myst/: README.md  pyproject.toml
examples/wenmode-myst/src/wenmode_myst/: __init__.py  parser.py  target.py
examples/wenmode-myst/tests/: conftest.py  test_parser.py
scripts/: benchmark.py  benchmark_edges.py  build_pypi_readme.py  download_commonmark_spec.py  download_gfm_spec.py
src/wenmode/: __init__.py  _positions.py  _streaming.py  ast.py  cli.py  headings.py  nodes.py  parser.py  presets.py  state.py  toc.py  utils.py  wenmode.py
src/wenmode/_declarative/: __init__.py  block.py  inline.py  install.py  render.py  spec.py
src/wenmode/_declaratives/: __init__.py  delimited.py  fenced.py
src/wenmode/_parser/: __init__.py  blocks.py  inlines.py  interrupts.py  ruleset.py  source.py  state.py  store.py
src/wenmode/directives/: __init__.py  abbr.py  admonition.py  details.py  figure.py  toc.py  util.py
src/wenmode/plugins/: __init__.py  _formatting.py  abbr.py  block_math.py  block_spoiler.py  cjk_friendly.py  definition_list.py  fenced_directive.py  frontmatter.py  github_alert.py  heading_ids.py  html_container.py  inline_math.py  inline_role.py  inline_spoiler.py  insert.py  mark.py  math.py  ruby.py  smartypants.py  spoiler.py  subscript.py  superscript.py  types.py
src/wenmode/renderers/: __init__.py  _shared.py  asciidoc.py  base.py  html.py  markdown.py  rst.py
src/wenmode/rules/: __init__.py  abbr.py  base.py  delimiters.py  directives.py  footnotes.py  references.py  transforms.py
src/wenmode/rules/blocks/: __init__.py  abbr.py  blank_line.py  blockquote.py  code.py  definition_list.py  directive.py  fenced_code.py  heading.py  html.py  indented_code.py  list.py  math.py  paragraph.py  setext_heading.py  spoiler.py  table.py  thematic_break.py  util.py
src/wenmode/rules/inlines/: __init__.py  code.py  directive.py  emphasis.py  extended_autolink.py  formatting.py  html.py  link.py  math.py  ruby.py  spoiler.py  strikethrough.py  text.py
src/wenmode/utils/: __init__.py  cjk.py  html.py  indentation.py  text.py
tests/: __init__.py  _edge_helpers.py  _renderer_fixtures.py  ast_fixtures.py  helpers.py  plugin_helpers.py  test_ast.py  test_base_render.py  test_block_rule_edges.py  test_cjk_friendly.py  test_cli.py  test_commonmark_spec.py  test_core_edges.py  test_coverage_edges.py  test_directive_reference_edges.py  test_directives.py  test_docs_examples.py  test_emphasis_flanking.py  test_extended_rules.py  test_frontmatter.py  test_gfm_spec.py  test_github_alert.py  test_html_render.py  test_inline_rule_edges.py  test_markdown_render.py  test_parser_design.py  test_parser_state.py  test_performance.py  test_positions.py  test_presets.py  test_renderer_edges.py  test_renderers.py  test_rst_render.py  test_rule_api.py  test_rule_composition.py  test_rule_edges.py  test_source_maps.py  test_stability.py  test_streaming.py  test_toc.py  (+2 more)
tests/fixtures/: block_rule_edges.json  directive_reference_edges.json  directives_ast.json  directives_html.json  extended_rules.json  footnotes.json  gfm-0.29.json  html_render.json  inline_rule_edges.json  markdown_render.json  math.json  positions.json  renderer.json  renderer.md  rst_render.json  rule_edges.json
