[project]
name = "wenmode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hsiaoming Yang", email = "me@lepture.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
benchmark = [
    "markdown>=3.10",
    "markdown-it-py>=4.0.0",
    "mistune>=3.1.4",
]
lint = [
    "mypy>=2.1.0",
    "ruff>=0.15.17",
]
test = [
    "pytest>=8.4.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "I", # isort
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/wenmode"]
show_error_codes = true
pretty = true

[tool.coverage.run]
branch = true
source = ["joserfc"]

[tool.coverage.paths]
source = ["src"]
