[project]
name = "wenmode"
dynamic = ["version"]
description = "A fast, composable Markdown parser and renderer toolkit."
readme = "README.md"
authors = [
    { name = "Hsiaoming Yang", email = "me@lepture.com" }
]
license = "BSD-3-Clause"
requires-python = ">=3.10"
dependencies = []
keywords = [
    "commonmark",
    "markdown",
    "mdast",
    "parser",
    "renderer",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.urls]
Homepage = "https://github.com/lepture/wenmode"
Repository = "https://github.com/lepture/wenmode"
Issues = "https://github.com/lepture/wenmode/issues"
Documentation = "https://wenmode.lepture.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.coverage",
    "/.idea",
    "/.mypy_cache",
    "/.pytest_cache",
    "/.ruff_cache",
    "/coverage.xml",
    "/demo.py",
    "/dist",
    "/docs/_build",
    "/htmlcov",
    "/public",
    "/uv.lock",
]

[tool.hatch.version]
path = "src/wenmode/__init__.py"

[dependency-groups]
benchmark = [
    "commonmark>=0.9.1",
    "markdown>=3.10",
    "markdown-it-py>=4.0.0",
    "markdown2>=2.5.0",
    "marko>=2.2.0",
    "mistune>=3.1.4",
]
docs = [
    "sphinx; python_version >= '3.11'",
    "shibuya; python_version >= '3.11'",
    "sphinx-design; python_version >= '3.11'",
    "sphinx-iconify; python_version >= '3.11'",
    "myst-parser; python_version >= '3.11'",
]
lint = [
    "mypy>=2.1.0",
    "ruff>=0.15.17",
]
test = [
    "pytest>=8.4.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "I", # isort
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/wenmode"]
show_error_codes = true
pretty = true

[tool.coverage.run]
branch = true
source = ["wenmode"]

[tool.coverage.paths]
source = ["src"]
