[project]
name = "wenmode-myst"
version = "0.1.0"
description = "Example Sphinx parser that builds MyST-like Markdown through Wenmode."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docutils",
    "sphinx",
    "wenmode",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

