[project]
name = "wenmode-myst"
version = "0.1.0"
description = "Example Sphinx parser that builds MyST-like Markdown through Wenmode."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docutils",
    "sphinx",
    "wenmode",
]

[tool.uv.sources]
wenmode = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
